2003-09-04  Bharat Mediratta  <bharat@menalto.com> 1.4-RC3-cvs-b10

	* Further on my fix from 1.4-RC3-cvs-b6.  Turns out that I should have
	  changed the album data protocol back then and forced an upgrade, but
	  didn't.  I'm bumping the album data version to 16 now which will
	  trigger an upgrade and removing the raw_filesize value from the Image
	  class altogether.  Now we'll calculate that on the fly (which will
	  take care of any lingering data mistmatches between -b9 and -b10 as
	  well as resolve any instances where the value was never set in the
	  first place.

2003-09-05  Jens Tkotz <jens@peino.de> 1.4-RC3-cvs-b9

        * Language update: Swedish (sv_SE)

2003-09-04  Jens Tkotz <jens@peino.de> 1.4-RC3-cvs-b8

	* New Language: Danish (da_DK)

	* Language update: Traditional Chinese (zh_TW), Polish (pl_PL)

2003-09-04  Jens Tkotz <jens@peino.de> 1.4-RC3-cvs-b7

	* Language update: Traditional Chinese (zh_TW), Finnish (fi_FI)

	* Fixed incorrect language names (zh_TW), (fi_FI)

2003-09-03 Bharat Mediratta <bharat@menalto.com> 1.4-RC3-cvs-b6

	* Worked around a PHP serialization bug where serialize() stores 
	  decimal values with commas in de_DE, but unserialize() can't handle
	  that format.  To avoid this issue, we don't use decimal values. This
	  also turned up an issue in Album::save() where if we failed to save
	  photos.dat we'd continue onwards and try to save album.dat (including
	  the photos data there), when instead we should fail.
		- Removed file size rounding code from classes/Image.php
		- Adjusted move_photo.php to expect file sizes in bytes
		- Improved classes/Album.php's save() method

	* Fixed minor HTML typo in user_preferences.php

2003-09-02  Jens Tkotz <jens@peino.de> 1.4-RC3-cvs-b5

	* Language Update: German (de_DE)
	  This also is a BUGFIX, because i missed a % in msgstr.

2003-09-02  Jens Tkotz <jens@peino.de> 1.4-RC3-cvs-b4
	
	* Language update: Spanish (es_ES), Traditional Chinese (zh_TW)
