@@ -1,3 +1,9 @@
+2003-09-05  Bharat Mediratta  <bharat@menalto.com> 1.4-RC3-cvs-b11
+
+	* Replace regular expression logic with standard string functions in
+	  the config wizard to work around bugs in RedHat 7.2 / PHP 4.1.2 where
+	  the regexp libraries tend to crash and burn.
+
 2003-09-04  Bharat Mediratta  <bharat@menalto.com> 1.4-RC3-cvs-b10
 
 	* Further on my fix from 1.4-RC3-cvs-b6.  Turns out that I should have
